@@ -7,6 +7,7 @@ Comprehensive changes can be found in Git change history:
 	Fixed: Per rule log adjusts was not saved if disabled.
 	Fixed: NullReferenceException & ArgumentException in relation to WinEventProc
 	Fixed: Watchlist rule adjust count was not updated.
+	Fixed: Path matching was broken in recent update.
 ### 2019-02-10
 	Changed: I/O priority requires `IO Priority=true` in [Experimental] in Core.ini.
 	Added: I/O priority is now in experiment config dialog and in watchlist rule editor.
